[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/motherShip.gd" type="Script" id=1]
[ext_resource path="res://Assets/motherShip.png" type="Texture" id=2]
[ext_resource path="res://Prefabs/droneReactorParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/motherShip_hit.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/motherShip_explode.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/interceptor_Shoot.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("droneReactorParticles:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("droneReactorParticles2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("droneReactorParticles3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("droneReactorParticles4:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]

resource_name = "hit"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1, 0 ]
}

[sub_resource type="Animation" id=3]

resource_name = "start"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="motherShip" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
dropOnDestroy = false
dropRange = 64
objectOnDestroy = null
nbrObjectOnDestroy = 1
nbrSprites = 1
rnd_Roation_Range_Max = 1
rnd_Roation_Range_Min = -1
life = 30
hitSomething = 10
points = 1000
speedX = 0.0
speedY = 50.0
randomX = 0
randomY = 0.0
randPowerUp = 100
setRotation = false
speedRotation = 0
rndRotation = false

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
hframes = 11
_sections_unfolded = [ "Transform" ]

[node name="anim" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/explode = SubResource( 1 )
anims/hit = SubResource( 2 )
anims/start = SubResource( 3 )
blend_times = [  ]
autoplay = ""

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]

rect = Rect2( -10, -10, 20, 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

position = Vector2( -0.279907, -1.6493 )
scale = Vector2( 2.9121, 6.09084 )
shape = SubResource( 4 )

[node name="ShootPos" type="Position2D" parent="." index="4"]

position = Vector2( -35.2943, -32.6769 )

[node name="ShootPos1" type="Position2D" parent="." index="5"]

position = Vector2( 35.2943, -32.3534 )

[node name="ShootPos2" type="Position2D" parent="." index="6"]

position = Vector2( -36.7354, -0.647072 )

[node name="ShootPos3" type="Position2D" parent="." index="7"]

position = Vector2( 36.0883, -0.647072 )

[node name="shootTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="droneReactorParticles" parent="." index="9" instance=ExtResource( 3 )]

visible = false
position = Vector2( -17.9999, -65.8506 )

[node name="droneReactorParticles2" parent="." index="10" instance=ExtResource( 3 )]

visible = false
position = Vector2( -13.9999, -65.8506 )

[node name="droneReactorParticles3" parent="." index="11" instance=ExtResource( 3 )]

visible = false
position = Vector2( 14.0001, -65.8506 )

[node name="droneReactorParticles4" parent="." index="12" instance=ExtResource( 3 )]

visible = false
position = Vector2( 18.0001, -65.8506 )

[node name="sound_Hit" type="AudioStreamPlayer2D" parent="." index="13"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Sounds"
area_mask = 1

[node name="sound_Explode" type="AudioStreamPlayer2D" parent="." index="14"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Sounds"
area_mask = 1

[node name="sound_Shooting" type="AudioStreamPlayer2D" parent="." index="15"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Sounds"
area_mask = 1

[connection signal="area_entered" from="." to="." method="_on_area_enter"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[connection signal="timeout" from="shootTimer" to="." method="_on_ShootTimer_timeout"]


